@@ -2,7 +2,7 @@ throughtput=$1
 interations=$2
 time=$3
 
-java --illegal-access=permit \
+java \
 --add-exports=java.base/jdk.internal.util=ALL-UNNAMED \
 --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED \
 --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
